--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,6 +6,7 @@ repos:
 - repo: https://github.com/pre-commit/pre-commit-hooks
   rev: v4.1.0
   hooks:
+  - id: check-yaml
   - id: check-added-large-files
   - id: check-executables-have-shebangs
   - id: check-shebang-scripts-are-executable
@@ -15,3 +16,8 @@ repos:
   rev: v0.17.0
   hooks:
   - id: gitlint
+
+- repo: https://github.com/python-jsonschema/check-jsonschema
+  rev: 0.14.0
+  hooks:
+    - id: check-github-workflows
