pre-commit/pylint: adds pylint config and fixes py scripts
Adds pylint gate in pre-commits hooks.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,3 +21,11 @@ repos:
     rev: 0.14.0
     hooks:
       - id: check-github-workflows
+  - repo: local
+    hooks:
+      - id: pylint
+        name: pylint
+        entry: pylint
+        language: system
+        types: [python]
+        require_serial: true
