github actions: ads pip dependency
pylint hook for pre-commit is a local hook, so we need to add the
dependencies required for the pythons scripts

Signed-off-by: Nicolas VINCENT <nicolas.vincent@vossloh.com>

--- a/.github/workflows/sanity.yml
+++ b/.github/workflows/sanity.yml
@@ -9,7 +9,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Install pre-commit
-        run: pip install pre-commit
+        run: pip install pre-commit pylint dbus-python
       - name: Lint Files
         run: pre-commit run --all-files
 
